fix pathing issue , modify the global Exception handler to work with object level errors , add the working hour validation logic for the second (edit) dto